--- a/DotNetCoreSqlDb.csproj
+++ b/DotNetCoreSqlDb.csproj
@@ -15,4 +15,9 @@
     <PackageReference Include="Microsoft.Extensions.Logging.AzureAppServices" Version="3.1.3" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
