--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyDbConnection": "Server=(localdb)\\mssqllocaldb;Database=MyDatabaseContext-2085246d-aff5-4310-a0b8-93780358cdae;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"MyDbConnection": "Server=(localdb)\\mssqllocaldb;Database=MyDatabaseContext-2085246d-aff5-4310-a0b8-93780358cdae;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MyDbConnection": "Server=tcp:matseliukhtest1.database.windows.net,1433;Initial Catalog=matseliukhtest1db;Persist Security Info=False;User ID=vova;Password=QWER!@#$5678;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
